manifests/busybox/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: busybox-dev-echo
  labels:
    tier: "2"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox-dev-echo
  template:
    metadata:
      labels:
        app: busybox-dev-echo
        tier: "3"
    spec:
      containers:
      - name: busybox
        image: busybox
        command: ["/bin/sh", "-c"]
        args: ["while true; do echo Hello Dev; sleep 5; done"]
        ports:
          - containerPort: 8080
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "200m"
        volumeMounts:
          - mountPath: /etc/missing-secret
            name: missing-secret
    volumes:
      - name: missing-secret
        secret:
          secretName: does-not-exist
