manifests/busybox/service.yml
apiVersion: v1
kind: Service
metadata:
  name: busybox-dev-echo
  namespace: busybox-echo
spec:
  selector:
    app: busybox-dev-echo
  ports:
    - port: 80
      targetPort: 8080
