manifests/busybox/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: busybox-dev-echo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: busybox-dev.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: busybox-dev-echo
                port:
                  number: 80
